<resources>
    <string name="app_name">ventilator_ext</string>
    <string name="hint_calibration_completed">Calibration completed</string>
    <string name="hint_calibration_failure">Calibration failure</string>
    <string name="hint_calibration_error">Calibration Error</string>
    <string name="hint_handshake_completed">Handshake completed</string>
    <string name="error_in_connection_restart_app">Unable to verify the connection automatically, please restart the app and try again</string>
    <string name="hint_copyright">All Rights Reserved. Copyright © 2022</string>
    <string name="press_switch_onn_manually">Press the power button at back of ventilator to switch on</string>
    <string name="connection_timeout">Unable to start Ventilator Try Again</string>
    <string name="press_switch_onn">Press the button to switch on the ventilator</string>
    <string name="hint_version">Version</string>
    <string name="hint_agva">AgVa</string>
    <string name="hint_pro">Pro</string>
    <string name="hint_previous_mode">Previous Mode :</string>
    <string name="hint_stand_by">StandBy</string>
    <string name="hint_no_ventilation_delivered_to_the_patient_since">no ventilation delivered \n to the patient since</string>
    <string name="hint_timer">00:03:22</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="hint_preop_check">Preop Check</string>
    <string name="hint_start_existing_ventilation">Start Existing ventilation</string>
    <string name="hint_no_vent_del">No Ventilation </string>
    <string name="hint_delivery">Delivered since</string>
    <string name="hint_start_new_ventilation">Start New ventilation</string>
    <string name="hint_neonatal">Neonatal</string>
    <string name="hint_adult_Ped">Adult/Ped</string>
    <string name="hint_last_patient">Last Patient</string>
    <string name="hint_adult">Adult</string>
    <string name="hint_ped">Pediatric</string>
    <string name="hint_patientHeight">Height</string>
    <string name="hint_patientWeight">Weight</string>
    <string name="hint_patientAge">Age</string>
    <string name="hint_adult_Ped_1">Adult/Ped. 1</string>
    <string name="hint_adult_Ped_2">Adult/Ped. 2</string>
    <string name="hint_adult_Ped_3">Adult/Ped. 3</string>
    <string name="hint_value">Ppeak</string>
    <string name="hint_upper_value">10</string>
    <string name="hint_down_value">40</string>
    <string name="hint_value_unit">40</string>
    <string name="hint_general">General</string>
    <string name="hint_auto">Auto</string>
    <string name="hint_electronic">Electronic</string>
    <string name="hint_plateau_pressure">Plateau Pressure</string>
    <string name="hint_auto_peep">Auto Peep</string>
    <string name="hint_measure_time">Measure Time</string>
    <string name="hint_layout_1">Layout 1</string>
    <string name="hint_layout_2">Layout 2</string>
    <string name="hint_layout_3">Layout 3</string>
    <string name="hint_layout_4">Layout 4</string>
    <string name="hint_layout_5">Layout 5</string>
    <string name="hint_layout_6">Layout 6</string>
    <string name="hint_pv_tool">P/V Tool</string>
    <string name="hint_utilities">Utilities</string>
    <string name="hint_inspiration_hold">Inspiration Hold</string>
    <string name="hint_expiration_hold">Expiration Hold</string>
    <string name="hint_data_transfer">Data Transfer</string>
    <string name="hint_export_logs">Export Logs</string>
    <string name="hint_events">Events</string>
    <string name="hint_nebulizer">Nebulizer</string>
    <string name="hint_intelliCuf">IntelliCuff</string>
    <string name="hint_humidifier">Humidifier</string>
    <string name="hint_pneumatic">Pneumatic</string>
    <string name="hint_aerogen">Aerogen</string>
    <string name="hint_off">Off</string>
    <string name="hint_manual">Manual</string>
    <string name="hint_deflate">Deflate</string>
    <string name="hint_hold">Hold</string>
    <string name="hint_rel_pressure">Rel. pressure</string>
    <string name="hint_min_pressure">Min. pressure</string>
    <string name="hint_max_pressure">Max. pressure</string>
    <string name="hint_cuff_pressure">Cuff. pressure</string>
    <string name="hint_pcuff_value">20 Pcuff</string>
    <string name="hint_ppeak_value">19 Ppeak</string>
    <string name="hint_invasive">Invasive</string>
    <string name="hint_niv">Niv</string>
    <string name="hint_exp_temperature_increase">Exp. temperature increase</string>
    <string name="hint_set_temp">Set Temp</string>
    <string name="hint_t_gradient">T Gradient</string>
    <string name="hint_info">Info</string>
    <string name="hint_test_calib">Tests &amp; Calib</string>
    <string name="hint_sensors">Sensors</string>
    <string name="hint_settings">Settings</string>
    <string name="hint_info_1">Info 1</string>
    <string name="hint_info_2">Info 2</string>
    <string name="hint_info_3">Info 3</string>
    <string name="hint_serial_number">Serial Number </string>
    <string name="hint_model">Model </string>
    <string name="hint_soft_version">Software Version </string>
    <string name="hint_hard_version">Hardware Version </string>
    <string name="hint_operating_hours">Operating Hours </string>
    <string name="hint_hours_since_startup">Hours since startup </string>
    <string name="standby_mode">Ventilator on Standby</string>
    <string name="hint_time_to_service">Time to service </string>
    <string name="hint_battery_level">Battery Level </string>
    <string name="hint_battery_health">Battery Health </string>
    <string name="hint_battery_rem_time">Battery Remaining Time </string>
    <string name="hint_communication_board">Communication board </string>
    <string name="hint_intelli_cuff">IntelliCuff : </string>
    <string name="hint_agva_healthcare">AgVa Healthcare 0099 </string>
    <string name="hint_tightness">Turbine</string>
    <string name="hint_flow_sensor">Flow Sensor</string>
    <string name="hint_inhale_flow_sensor">Inhale Flow Sensor</string>
    <string name="hint_exhale_flow_sensor">Exhale Flow Sensor</string>
    <string name="hint_o2_sensor">O₂ Sensor</string>
    <string name="hint_high_pressure_O2_sensor">High Pressure O₂ Sensor</string>
    <string name="hint_low_pressure_O2_sensor">Low Pressure O₂ Sensor</string>
    <string name="hint_co2_sensor">CO₂ Sensor</string>
    <string name="hint_pressure_sensor">Pressure Sensor</string>
    <string name="hint_temp_sensor">Temperature Sensor</string>
    <string name="hint_on_off">On/Off</string>
    <string name="hint_spo2_sensor">SpO₂ Sensor</string>
    <string name="hint_active">active</string>
    <string name="hint_inactive">inactive</string>
    <string name="hint_spo2_averaging_time">SpO₂ averaging time</string>
    <string name="hint_spot_check">Spot Check</string>
    <string name="hint_sensor_results">Sensor results</string>
    <string name="hint_pvi_averaging_mode">PVI averaging mode</string>
    <string name="hint_defaults">Defaults</string>
    <string name="hint_loudness">Loudness</string>
    <string name="hint_day_night">Day &amp; Night</string>
    <string name="hint_date_time">Date &amp; Time</string>
    <string name="hint_test">Test</string>
    <string name="hint_brightness">Brightness</string>
    <string name="hint_day">Day</string>
    <string name="hint_night">Night</string>
    <string name="hint_automatic">Automatic</string>
    <string name="hint_year">Year</string>
    <string name="hint_month">Month</string>
    <string name="hint_hour">Hour</string>
    <string name="hint_minute">Minute</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="hint_apply">Apply</string>
    <string name="hint_volume_controlled">Volume controlled </string>
    <string name="hint_volume_control">Volume control </string>
    <string name="hint_vc_cmv">VC-CMV</string>
    <string name="hint_vc_simv">VC-SIMV(PS)</string>
    <string name="hint_vc_cv">VC-AC</string>
    <string name="hint_prvc">PRVC</string>
    <string name="hint_pressure_controlled">Pressure controlled</string>
    <string name="hint_pressure_control">Pressure control</string>
    <string name="auto_control">Auto Control</string>
    <string name="hint_pc_cmv">PC-CMV</string>
    <string name="hint_pc_imv">PC-SIMV</string>
    <string name="hint_spont">PC-AC</string>
    <string name="hint_psv">PSV</string>
    <string name="hint_pc_aprv">PC-APRV</string>
    <string name="cmd_preop">CM+SA</string>
    <string name="cmd_calibration_flow">CM+SC1</string>
    <string name="cmd_calibration_presser">CM+SC2</string>
    <string name="cmd_calibration_oxyzen">CM+SC3</string>
    <string name="cmd_calibration_turbine">CM+SC4</string>
    <string name="hint_intelligent_ventilation">Intelligent Ventilation</string>
    <string name="hint_bpap">PC-BPAP</string>
    <string name="hint_cpap">CPAP/PS</string>
    <string name="hint_ai_vent">AI-VENT</string>
    <string name="hint_noninvasive">Non Invasive</string>
    <string name="hint_spontaneous">Spontaneous</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_confirm">Confirm</string>
    <string name="hint_select_mode">Please select the ventilator mode</string>
    <string name="hint_basic">Basic</string>
    <string name="hint_more">More</string>
    <string name="hint_backupsettings">Backup</string>
    <string name="hint_advancedsettings">Advanced</string>
    <string name="hint_apneasettings">Apnea</string>
    <string name="hint_patient_height">Pat. height</string>
    <string name="hint_patient">Patient</string>
    <string name="hint_ventilation_time">Ventilation Time : </string>
    <string name="hint_reset">Reset</string>
    <string name="hint_shutdown">Shutdown Ventilator</string>
    <string name="hint_minVol">MinVol:</string>
    <string name="hint_p_ramp">P-ramp</string>
    <string name="hint_pasvLimit">Pasvlimit</string>
    <string name="hint_ets">ETS</string>
    <string name="hint_flow_trigger">Flow Trigger</string>
    <string name="hint_minVol_percentage">%minVol</string>
    <string name="hint_peep_cpap">PEEP/CPAP</string>
    <string name="hint_oxygen">Oxygen</string>
    <string name="hint_f">F</string>
    <string name="hint_p">P</string>
    <string name="hint_limit_1">Limit 1</string>
    <string name="hint_limit_2">Limit 2</string>
    <string name="hint_buffer">Buffer</string>
    <string name="hint_pressure_cmH2o">Pressure \n cmH₂O</string>
    <string name="hint_mvi">MVi </string>
    <string name="hint_f_total">fTotal </string>
    <string name="hint_b_min">b/min</string>
    <string name="hint_vte">VTe</string>
    <string name="hint_apnea_time">Apnea time</string>
    <string name="hint_s">s</string>
    <string name="hint_petCO2">PetCO₂</string>
    <string name="hint_mmHg">mmHg</string>
    <string name="hint_litre">litre</string>
    <string name="hint_compensated_vt">Compensated VT</string>
    <string name="hint_spo2_percentage">SpO₂ \n    %</string>
    <string name="hint_pulse">Pulse</string>
    <string name="hint_trends">Trends</string>
    <string name="hint_loops">Loops</string>
    <string name="hint_waveforms">Waveforms</string>
    <string name="hint_1_h">1 h</string>
    <string name="hint_6_h">6 h</string>
    <string name="hint_12_h">12 h</string>
    <string name="hint_24_h">24 h</string>
    <string name="hint_72_h">72 h</string>
    <string name="hint_pressure_volume">Pressure/Volume</string>
    <string name="hint_pressure_flow">Pressure/Flow</string>
    <string name="hint_volume_flow">Pressure/Flow</string>
    <string name="pinsp">PINSP</string>
    <string name="inhale_time">Tinsp</string>
    <string name="titot">Ti/ToT</string>
    <string name="hint_setting_of_pcv">CONTROL DESCRIPTION</string>
    <string name="pi">PI</string>
    <string name="ps">PS</string>
    <string name="ieratio">I:E RATIO</string>
    <string name="trig_exp">Trig Exp</string>
</resources>